---
Refactor modules/newsletter.js SendPost()
Added modules/set_activity.js to set current activity of bot. Using for setting 'test' while testing from local pc etc.
---
Fiexd type video inssue in modules/newsletter.js
Fixed messages fetch limit (increased from 1 to 10) in modules/newsletter.js
Kinda adaptive express host url in server.js and some commands
---
Fixing type video issue in modules/newsletter.js
Changed updating time in index.js
modules/statistic.js files array (frames) refactor to sort()
new commands group - mt.js
New format of todo.txt (translated to rus)
---
Added changelog.txt and todo.txt
Added .gitkeep in source/bages/frames for tracking frames folder
Added if condition in views/index.js: if name == zero --> return (in case if u entering localhost w/o params)