@@ -1,6 +1,7 @@
 ---
 Refactor modules/newsletter.js SendPost()
 Added modules/set_activity.js to set current activity of bot. Using for setting 'test' while testing from local pc etc.
+Refactoring modules/newsletter.js from callbacks to async/await
 ---
 Fiexd type video inssue in modules/newsletter.js
 Fixed messages fetch limit (increased from 1 to 10) in modules/newsletter.js
